...
    final user = ref.watch(
      checkoutViewModelProvider.select((state) => state.user),
    );

    final items = [
      CheckoutItem(
        label: "Ship to",
        content: user?.deliveryAddress?.toString(),
        nullValueFallBackMessage: "Add a delivery address",
        onPressed: () => context.pushTo(AppRoute.deliveryInformation),
      ),
      CheckoutItem(
        label: "Billing Address",
        content: user?.billingAddress?.toString(),
        nullValueFallBackMessage: "Add a billing address",
        onPressed: () => context.pushTo(AppRoute.deliveryInformation),
      ),
      CheckoutItem(
        label: "Delivery Method",
        content: checkoutState.deliveryMethod?.toString(),
        nullValueFallBackMessage: "Select a delivery method",
        onPressed: () => context.pushTo(
          AppRoute.deliveryMethod,
          extra: checkoutState.deliveryMethod,
        ),
      ),
      CheckoutItem(
        label: "Payment Method",
        content: checkoutState.paymentCard?.displayString(),
        nullValueFallBackMessage: "Add a payment method",
        onPressed: () => context.pushTo(
          AppRoute.paymentMethod,
          extra: checkoutState.paymentCard,
        ),
      ),
    ];

    return Scaffold(
      appBar: AppBar(
        flexibleSpace: Header(
          title: "Checkout",
          leading: AppButton.tertiary(
            leading: AppIcons.back,
            onPressed: () => context.goTo(AppRoute.bag),
          ),
        ),
        automaticallyImplyLeading: false,
...
                    ),
                  ],
                ),
                SizedBox(
                  width: double.infinity,
                  child: AppButton.primary(
                    label: "Place Order",
                    isDisabled: !checkoutState.canPlaceOrder,
                    onPressed: () {
                      ref.read(checkoutViewModelProvider.notifier).placeOrder();
                      context.goTo(AppRoute.orderConfirmation);
                    },
                  ),
...
