...
          autovalidateMode: AutovalidateMode.onUnfocus,
          child: SingleChildScrollView(
            child: Column(
              spacing: Spacing.medium,
              children: [
                Header(
                  title: "Add new card",
                  leading: AppButton.tertiary(
                    leading: AppIcons.close,
                    onPressed: () => context.safePop(),
                  ),
                ),
                Column(
                  spacing: Spacing.small,
                  children: [
                    AppInputField(
                      "Card Number",
                      key: const Key('card_number_field'),
                      keyboardType: TextInputType.number,
                      validator: context.validateCardNumber,
                      onChanged: (value) => card.value = card.value.copyWith(
                        number: PaymentCardUtils.getCleanedNumber(value),
                        type: PaymentCardUtils.getCardTypeFrmNumber(value),
                      ),
...
                        CardNumberInputFormatter(),
                      ],
                    ),

                    AppInputField(
                      "Name on card",
                      key: const Key('card_name_field'),
                      keyboardType: TextInputType.text,
                      validator: (String? value) =>
                          value!.isEmpty ? "This field is required" : null,
                      onChanged: (value) =>
                          card.value = card.value.copyWith(name: value),
                    ),
...
                      spacing: Spacing.small,
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        Expanded(
                          child: AppInputField(
                            "Expiry Date",
                            key: const Key('card_expiry_field'),
                            validator: context.validateDate,
                            keyboardType: TextInputType.datetime,
                            inputFormatters: [
                              FilteringTextInputFormatter.digitsOnly,
                              LengthLimitingTextInputFormatter(4),
                              CardMonthInputFormatter(),
...
                            },
                          ),
                        ),
                        Expanded(
                          child: AppInputField(
                            "CVV",
                            key: const Key('card_cvv_field'),
                            validator: context.validateCVV,
                            keyboardType: TextInputType.number,
                            onChanged: (value) {
                              if (value.isEmpty) return;
                              card.value = card.value.copyWith(
                                cvv: int.parse(value),
...
