...
          horizontal: Spacing.small,
        ),
        child: Column(
          spacing: Spacing.small,
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Text("Thank you!", style: context.textTheme.displayLarge),
            const Text("ORDER NUMBER #1A2B3C4D"),
            Text(
              "We sent an email to ${email ?? 'your email address'} with everything you need to know about your order. Log in or register to enjoy a personalized experience and access all our services.",
            ),
          ],
        ),
      ),
...
